--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
 		    <artifactId>h2</artifactId>
 		    <scope>test</scope>
 		</dependency>
+		<!-- Lombok (optionnel mais pratique) -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
